# 4k_demo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  hello_world.cpp  main.cpp  mandelbrot.cpp  math.hpp  ocean.cpp  orbital_resonance.cpp  simple_window.cpp  sound_out.cpp  terrain.cpp  tetris.cpp  u_test.u  window.hpp
.github/workflows/: windows.yml
ci/: build_release_windows.bat  build_release_windows_32.bat  build_release_windows_64.bat
